Initial push to GitHub: DTO refactor, legacy cleanup, views/CSS cleanup